updated E-mail address in README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Author: Doron Horwitz (milkekza@gmail.com)
+Author: Doron Horwitz (doron@milktek.com)
 License: New BSD License (http://doronhorwitz.github.com/bsd_new_license.txt)
 Site: http://doronhorwitz.github.com/XML-SWF-Charts-for-CI/
 
